--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-	"name": "my_fullstackopen_p4_blog-backend",
-	"version": "1.0.0",
-	"description": "MERN stack blog post app.",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js",
-		"dev": "nodemon index.js",
-		"test": "jest --verbose"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/frasemcl/my_fullstackopen_p4_blog-backend.git"
-	},
-	"author": "Fraser McLaughlin",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/frasemcl/my_fullstackopen_p4_blog-backend/issues"
-	},
-	"homepage": "https://github.com/frasemcl/my_fullstackopen_p4_blog-backend#readme",
-	"dependencies": {
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"lodash": "^4.17.21",
-		"mongoose": "^6.8.2"
-	},
-	"devDependencies": {
-		"eslint": "^8.31.0",
-		"jest": "^29.3.1",
-		"nodemon": "^2.0.20"
-	},
-	"jest": {
-		"testEnvironment": "node"
-	}
+  "name": "my_fullstackopen_p4_blog-backend",
+  "version": "1.0.0",
+  "description": "MERN stack blog post app.",
+  "main": "index.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/frasemcl/my_fullstackopen_p4_blog-backend.git"
+  },
+  "author": "Fraser McLaughlin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/frasemcl/my_fullstackopen_p4_blog-backend/issues"
+  },
+  "homepage": "https://github.com/frasemcl/my_fullstackopen_p4_blog-backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.8.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^8.31.0",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
