--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/frasemcl/my_fullstackopen_p4_blog-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
